Updated new pom.xml