@@ -212,7 +212,7 @@
                         <id>attach-sources-files</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>jar-no-fork</goal>
+                            <goal>jar</goal>
                         </goals>
                         <configuration>
                             <includes>
@@ -574,36 +574,6 @@
 		
                             <sourcepath>${project.build.directory}/sources</sourcepath>
                             <!--<doclint>none</doclint>-->
-                            <!--Excludes that match each of the subproject excludes -->
-                            <sourceFileExcludes>
-								<exclude>**/Jvm.java</exclude>
-                                <exclude>**/OS.java</exclude>                                
-                                <exclude>**/ByteBufferAccessor.java</exclude>
-                                <exclude>**/Jdk8ByteBufferCleanerService.java</exclude>
-								<exclude>**/ReflectionBasedByteBufferCleanerService.java</exclude>
-								
-                                <exclude>net/openhft/chronicle/threads/TimeoutPauser.java</exclude>
-                                <exclude>net/openhft/chronicle/threads/YieldingPauser.java</exclude>
-                                <exclude>net/openhft/chronicle/hash/ChronicleHashBuilderPrivateAPI.java</exclude>
-                                <exclude>net/openhft/chronicle/hash/VanillaGlobalMutableState.java</exclude>
-                                <exclude>net/openhft/chronicle/hash/ReplicatedHashSegmentContext.java</exclude>
-                                <exclude>net/openhft/chronicle/hash/VanillaGlobalMutableState*Native.java</exclude>
-                                <exclude>net/openhft/chronicle/map/MapDiagnostics.java</exclude>
-                                <exclude>net/openhft/chronicle/map/VanillaChronicleMap.java</exclude>
-                                <exclude>net/openhft/chronicle/map/Replica.java</exclude>
-                                <exclude>net/openhft/chronicle/map/ReplicatedChronicleMap.java</exclude>
-                                <exclude>net/openhft/chronicle/map/ReplicatedGlobalMutableState*Native.java</exclude>
-                                <exclude>net/openhft/chronicle/map/ChronicleHashCorruptionImpl.java</exclude>
-                                <exclude>net/openhft/chronicle/set/DummyValueData.java</exclude>
-                                <exclude>net/openhft/chronicle/values/FieldModel.java</exclude>
-                                <exclude>net/openhft/chronicle/values/ArrayFieldModel.java</exclude>
-                                <exclude>net/openhft/chronicle/values/Enums.java</exclude>
-                                <exclude>net/openhft/chronicle/values/CharSequences.java</exclude>
-                                <exclude>net/openhft/chronicle/values/PointersBytesStore.java</exclude>
-                                <exclude>net/openhft/chronicle/values/HeapByteable.java</exclude>
-                                
-                                <exclude>**/Compiled*.java</exclude>
-                            </sourceFileExcludes>
                             <excludePackageNames>
                                 net.openhft.chronicle.hash.serialization.impl:net.openhft.chronicle.hash.impl:net.openhft.chronicle.map.impl:**.replication
                             </excludePackageNames>
@@ -616,24 +586,6 @@
         					<fork>false</fork>
         					<sourceCompatibility>8</sourceCompatibility>
         					<targetCompatibility>8</targetCompatibility>
-                            
-                            <compilerArgs>
-                                <arg>--add-exports=jdk.internal.opt/jdk.internal.joptsimple=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                                <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-                                <arg>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.base/sun.security.provider=ALL-UNNAMED</arg>
-                                <arg>--add-opens=java.base/sun.security.util=ALL-UNNAMED</arg>
-                                <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                            </compilerArgs>
-
-<!--                            <additionalJOptions>-->
-<!--                                <additionalJOption>&#45;&#45;add-exports sun.nio.ch</additionalJOption>-->
-<!--                            </additionalJOptions>-->
-<!--                            <additionalOptions>-->
-<!--                                <additionalOption>-d</additionalOption>-->
-<!--                                <additionalOption>&#45;&#45;add-exports sun.nio.ch</additionalOption>-->
-<!--                            </additionalOptions>-->
                         </configuration>
                     </execution>
                 </executions>
